--- a/index.html
+++ b/index.html
@@ -91,6 +91,61 @@
 
 
 </section>
+<section class="resume">
+    <h3 class="section-title text-center">A summary of My Resume</h3>
+    <div class="resume-container">
+        <div class="resume-column">
+            <h3 class="column-title">My Education</h3>
+            <div class="experiance">
+                <h4 class="experiance-title">Master in Computer Engineering</h4>
+                <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                <div class="experience-descrip">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr>
+            <div class="experiance">
+                <h4 class="experiance-title">Master in Computer Engineering</h4>
+                <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                <div class="experience-descrip">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr>
+            <div class="experiance">
+                <h4 class="experiance-title">Master in Computer Engineering</h4>
+                <h5 class="experience-sub-title">Harvard University / 2015 - 2017</h5>
+                <div class="experience-descrip">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+        </div>
+        <div class="resume-column">
+            <h3 class="column-title">My Experience</h3>
+            <div class="experiance">
+                <h4 class="experiance-title">Sr. Font End Developer</h4>
+                <h5 class="experience-sub-title">Apple Inc / 2020 - Current</h5>
+                <div class="experience-descrip">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr>
+            <div class="experiance">
+                <h4 class="experiance-title">Jr. Font End Developer</h4>
+                <h5 class="experience-sub-title">Dribbble Inc / 2018 - 2022</h5>
+                <div class="experience-descrip">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+            <hr>
+            <div class="experiance">
+                <h4 class="experiance-title">HTML Developer</h4>
+                <h5 class="experience-sub-title">Adobe Inc / 2017 - 2018</h5>
+                <div class="experience-descrip">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </div>
+        </div>
+    </div>
+    <div class="text-center cv-btn">
+        <button class="btn-primary">Dowwnload CV</button>
+    </div>
+    
+</section>
 
     </main>
 
