--- a/index.html
+++ b/index.html
@@ -151,8 +151,26 @@
 
 
 
-<footer>
+<footer class="sec-bg">
+<div class="footer-column">
+<h3 class="section-title">Lets Connect</h3>
+<p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+<div>
+    <a href=""><img src="images/icons/facebook.png"></a>
+    <a href=""><img src="images/icons/insta.png"></a>
+    <a href=""><img src="images/icons/twitter.png"></a>
+</div>
+</div>
+<div class="footer-column">
+    <h3 class="section-title">Let's Inbox Me</h3>
+    <form action="">
+        <input type="text" name="" id="" placeholder="Your Name">
+        <input type="email" name="" id="" placeholder="Your Email">
+        <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+        <input class="btn-primary" type="submit" value="Submit">
 
+    </form>
+</div>
 </footer>  
 
 </body>
